--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Roboto:wght@400;500;700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+          integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/main.css" type="text/css">
     <title>Figma-макет</title>
 </head>
 <body>
 <header class="header-block">
-
+    <div class="wrapper">
+        <nav class="nav-block">
+            <ul class="nav">
+                <li>
+                    <a href="#">Доставка</a>
+                </li>
+                <li>
+                    <a href="#">Оплата</a>
+                </li>
+                <li>
+                    <a href="#">Отзывы</a>
+                </li>
+                <li>
+                    <a href="#">Вопрос-ответ</a>
+                </li>
+                <li>
+                    <a href="#">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="bg-white">
+        <div class="header">
+            <div class="wrapper">
+                <div class="header-top">
+                    <div class="logo">
+                        BEAUTY
+                    </div>
+                    <div class="header-info">
+                        <span class="">8 (812) 123-45-67</span>
+                        <button class="" type="button">Обратный звонок</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 
 <script src="./js/script.js"></script>
