figma-макет 2. Тело сайта

--- a/index.html
+++ b/index.html
@@ -51,9 +51,41 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <div class="wrapper">
+                <div class="header-bottom">
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Парикмахерская</a>
+                        </li>
+                        <li>
+                            <a href="#">ДосБарбершоп</a>
+                        <li>
+                            <a href="#">Маникюр</a>
+                        </li>
+                        <li>
+                            <a href="#">Педикюр</a>
+                        </li>
+                        <li>
+                            <a href="#">Массаж</a>
+                        </li>
+                        <li>
+                            <a href="#">Мебель</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </header>
+
+<main class="banner">
+    <div class="wrapper">
+    <h1 class="title">Супер кресло</h1>
+        <p>Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
+        <a class="btn" href="#">Подробнее</a>
+    </div>
+</main>
 
 <script src="./js/script.js"></script>
 </body>
