--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="wrapper">
                 <div class="header-top">
                     <div class="logo">
-                        BEAUTY
+                     <span class="logo-img"></span><span>BEAUTY</span>
                     </div>
                     <div class="header-info">
                         <span class="">8 (812) 123-45-67</span>
