--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="wrapper">
                 <div class="header-top">
                     <div class="logo">
-                     <span class="logo-img"></span><span>BEAUTY</span>
+                        <span class="logo-img"></span><span>BEAUTY</span>
                     </div>
                     <div class="header-info">
                         <span class="">8 (812) 123-45-67</span>
@@ -81,11 +81,87 @@
 
 <main class="banner">
     <div class="wrapper">
-    <h1 class="title">Супер кресло</h1>
+        <h1 class="title">Супер кресло</h1>
         <p>Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
         <a class="btn" href="#">Подробнее</a>
     </div>
 </main>
+<section>
+    <div class="wrapper">
+        <div class="grid">
+            <div class="grid-item">
+                <h2 class="title-h2">Специальные предложения</h2>
+            </div>
+            <div class="grid-item">
+                <img src="../assets/img/car.svg" alt="car">
+            </div>
+            <div class="grid-item">
+                <div class="bg-white">
+                    <div class="cards">
+                        <img src="../assets/img/chair.png" alt="chair">
+                    </div>
+                    <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="grid-price">9 900 ₽ </p>
+                    <a class="grid-btn" href="#">Купить</a>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="bg-white">
+                    <div class="cards">
+                        <img src="../assets/img/chair.png" alt="chair">
+                    </div>
+                    <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="grid-price">9 900 ₽ </p>
+                    <a class="grid-btn" href="#">Купить</a>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="bg-white">
+                    <div class="cards">
+                        <img src="../assets/img/chair.png" alt="chair">
+                    </div>
+                    <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="grid-price">9 900 ₽ </p>
+                    <a class="grid-btn" href="#">Купить</a>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="bg-white">
+                    <div class="cards">
+                        <img src="../assets/img/chair.png" alt="chair">
+                    </div>
+                    <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="grid-price">9 900 ₽ </p>
+                    <a class="grid-btn" href="#">Купить</a>
+                </div>
+            </div>
+
+            <div class="grid-item">
+                <div class="bg-green">
+                    <div class="bg-green-item">
+                        <h3>Получайте бонусы и подарки</h3>
+                        <p>Каждый месяц разыгрываем
+                            10 000 рублей для наших клиентов</p>
+                        <input type="email" placeholder="Введите e-mail">
+                    </div>
+                    <div class="bg-green-item">
+                        <img src="../assets/img/envelope.png" alt="envelope">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="bg-green">
+                    <div class="bg-green-item">
+                        <h3>Заходите к нам</h3>
+                        <p>Более 300 магазинов
+                            по всей России</p>
+                        <a class="btn" href="#">Карта магазинов</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="./js/script.js"></script>
 </body>
