--- a/index.html
+++ b/index.html
@@ -86,49 +86,49 @@
         <a class="btn" href="#">Подробнее</a>
     </div>
 </main>
-<section>
+<section class="catalog">
     <div class="wrapper">
         <div class="grid">
-            <div class="grid-item">
+            <div class="grid-item grid-item-title">
                 <h2 class="title-h2">Специальные предложения</h2>
             </div>
-            <div class="grid-item">
-                <img src="../assets/img/car.svg" alt="car">
+            <div class="grid-item grid-item-img">
+                <img src="/assets/img/car.svg" alt="car">
             </div>
-            <div class="grid-item">
+            <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="cards">
-                        <img src="../assets/img/chair.png" alt="chair">
+                        <img src="/assets/img/chair.png" alt="chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
                     <a class="grid-btn" href="#">Купить</a>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="cards">
-                        <img src="../assets/img/chair.png" alt="chair">
+                        <img src="/assets/img/chair.png" alt="chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
                     <a class="grid-btn" href="#">Купить</a>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="cards">
-                        <img src="../assets/img/chair.png" alt="chair">
+                        <img src="/assets/img/chair.png" alt="chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
                     <a class="grid-btn" href="#">Купить</a>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item grid-item-catalog">
                 <div class="bg-white">
                     <div class="cards">
-                        <img src="../assets/img/chair.png" alt="chair">
+                        <img src="/assets/img/chair.png" alt="chair">
                     </div>
                     <p class="grid-title">Парикмахерское кресло «Норм» гидравлическое</p>
                     <p class="grid-price">9 900 ₽ </p>
@@ -136,7 +136,7 @@
                 </div>
             </div>
 
-            <div class="grid-item">
+            <div class="grid-item grid-item-left">
                 <div class="bg-green">
                     <div class="bg-green-item">
                         <h3>Получайте бонусы и подарки</h3>
@@ -144,12 +144,10 @@
                             10 000 рублей для наших клиентов</p>
                         <input type="email" placeholder="Введите e-mail">
                     </div>
-                    <div class="bg-green-item">
-                        <img src="../assets/img/envelope.png" alt="envelope">
-                    </div>
+                    <img class="bg-green-img" src="/assets/img/envelope.svg" alt="envelope">
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item grid-item-right">
                 <div class="bg-green">
                     <div class="bg-green-item">
                         <h3>Заходите к нам</h3>
