--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <a href="#">Парикмахерская</a>
                         </li>
                         <li>
-                            <a href="#">ДосБарбершоп</a>
+                            <a href="#">Барбершоп</a>
                         <li>
                             <a href="#">Маникюр</a>
                         </li>
@@ -140,19 +140,17 @@
                 <div class="bg-green">
                     <div class="bg-green-item">
                         <h3>Получайте бонусы и подарки</h3>
-                        <p>Каждый месяц разыгрываем
-                            10 000 рублей для наших клиентов</p>
+                        <p>Каждый месяц разыгрываем 10 000 рублей для наших клиентов</p>
                         <input type="email" placeholder="Введите e-mail">
                     </div>
-                    <img class="bg-green-img" src="/assets/img/envelope.svg" alt="envelope">
+                    <img class="bg-green-img" src="/assets/img/envelope.svg" alt="envelope"/>
                 </div>
             </div>
             <div class="grid-item grid-item-right">
                 <div class="bg-green">
                     <div class="bg-green-item">
                         <h3>Заходите к нам</h3>
-                        <p>Более 300 магазинов
-                            по всей России</p>
+                        <p>Более 300 магазинов по всей России</p>
                         <a class="btn" href="#">Карта магазинов</a>
                     </div>
                 </div>
